sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: value valeur is not a member of Boolean
    while ( n>=0 valeur< getValeur(n) ){
                 ^AlgInsertionSort:9: error: not found: value <
    while ( n>=0 valeur< getValeur(n) ){
                       ^